// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should correctly render ExpensesSummary with 1 expense 1`] = `
<div>
  <h1>
    Viewing 
     
    expenses
     totalling 
    $2.35
  </h1>
</div>
`;

exports[`should correctly render ExpensesSummary with 2 expenses 1`] = `
<div>
  <h1>
    Viewing 
     
    expenses
     totalling 
    $2,355,324.52
  </h1>
</div>
`;
